<resources>
    <string name="app_name">PF Tracker</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="action_settings">Settings</string>
    <string name="action_contact">Contact</string>
    <string name="action_export">Export</string>
    <string name="action_import">Import</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Entries</string>
    <string name="menu_slideshow">Graphs</string>

    <string name="missing_days">Past Week Averages</string>

    <string name="graphs_figure">Graphs Figure</string>

    <string name="time_toggle">Toggle AM and PM</string>
    <string name="time_hours">Hours</string>
    <string name="time_minutes">Minutes</string>
    <string name="time_am">AM</string>
    <string name="time_pm">PM</string>
    <string name="time_current">Now</string>

    <string name="pretreat">Pre-Treatment</string>
    <string name="posttreat">Post-Treatment</string>

    <string name="pre">Pre</string>
    <string name="post">Post</string>

    <string name="entry_suggest">Peak Flow</string>
    <string name="entry_submit">Submit</string>

    <string name="date">Date</string>
    <string name="entries">Entries</string>
    <string name="average">Avg</string>

</resources>
