<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddEntry">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <CalendarView
            android:id="@+id/calendar_entry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/time_hour"
                android:layout_width="@dimen/time_margin"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autofillHints="@string/time_hours"
                android:ems="10"
                android:hint="@string/time_hours"
                android:inputType="number" />

            <EditText
                android:id="@+id/time_min"
                android:layout_width="@dimen/time_margin"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autofillHints="@string/time_minutes"
                android:ems="10"
                android:hint="@string/time_minutes"
                android:inputType="number" />

            <ToggleButton
                android:id="@+id/time_toggle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textOff="@string/time_am"
                android:textOn="@string/time_pm" />

            <Button
                android:id="@+id/current_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/time_current" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/measure_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autofillHints="@string/entry_suggest"
                android:ems="10"
                android:hint="@string/entry_suggest"
                android:inputType="number" />

            <EditText
                android:id="@+id/measure_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autofillHints="@string/entry_suggest"
                android:ems="10"
                android:hint="@string/entry_suggest"
                android:inputType="number" />

            <EditText
                android:id="@+id/measure_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autofillHints="@string/entry_suggest"
                android:ems="10"
                android:hint="@string/entry_suggest"
                android:inputType="number" />
        </LinearLayout>

        <ToggleButton
            android:id="@+id/entry_treatment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textOff="@string/pretreat"
            android:textOn="@string/posttreat" />

        <Button
            android:id="@+id/entry_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/entry_submit" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>