<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.dude36.pftracker.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/action_nav_home_to_nav_graphs"
            app:destination="@id/nav_graphs" />
        <action
            android:id="@+id/action_nav_home_to_nav_entry"
            app:destination="@id/nav_entry" />
    </fragment>

    <fragment
        android:id="@+id/nav_entry"
        android:name="com.dude36.pftracker.ui.entries.EntriesFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_entries" />

    <fragment
        android:id="@+id/nav_graphs"
        android:name="com.dude36.pftracker.ui.graphs.GraphsFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_graphs" >
    </fragment>
</navigation>